# ardo

./: .gitignore  README.md  links.md
code/: CMakeLists.txt  Makefile  ordo
code/libs/: libsfml-audio.2.1.dylib  libsfml-graphics.2.1.dylib  libsfml-network.2.1.dylib  libsfml-system.2.1.dylib  libsfml-window.2.1.dylib
code/libs/fmod/api/studio/examples/: objectpan.cpp
code/libs/fmod/api/studio/examples/media/: Character.bank  Master Bank.bank  Master Bank.strings.bank  Music.bank  Object Panning.bank  UI_Menu.bank  Vehicles.bank  Weapons.bank
code/libs/fmod/doc/: revision.txt
code/libs/fmod/plugins/google_vr/: readme.txt
code/ordo.xcodeproj/: project.pbxproj
code/ordo.xcodeproj/xcuserdata/henrax.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
code/src/: Board.cpp  Board.h  Game.cpp  Game.h  Hud.cpp  Hud.h  HudMessage.cpp  HudMessage.h  NotifciationCenter.cpp  NotifciationCenter.h  Object.cpp  Object.h  Renderer.cpp  Renderer.h  Sound.cpp  Sound.h  SoundRenderer.cpp  SoundRenderer.h  Vector.h  board.cpp  board.h  common.h  main.cpp  renderer.cpp  renderer.h  sound.cpp  sound.h  vector.h
tex/: bibliography.bib  report.tex
